--- a/themes/paas/index.html
+++ b/themes/paas/index.html
@@ -11,6 +11,7 @@
     <meta name="Keywords" content="项目管理系统,计划管理,任务管理,工作平台,文档管理系统,文档管理软件,文档管理,知识管理">
     <meta name="Description" content="易度在线工作平台，包括一组在线发布的企业日常管理软件服务，采用SaaS模式发布。具体包括易度项目、易度流程、易度计划、易度>报告、易度任务、易度文档、易度论坛、易度部门、易度消息、易度费用、易度工作量、易度客户等."/>
 
+    <base href="$base" /><!--[if lt IE 7]></base><![endif]-->
 
 	<link href="/themes/paas/css/base.css" rel="stylesheet" type="text/css" />
 	<link href="/themes/paas/css/document.css" rel="stylesheet" type="text/css" />
@@ -27,9 +28,6 @@
     <script src="..//themes/paas/general/js/zoom/FancyZoom.js" type="text/javascript" ></script>
     <script src="..//themes/paas/general/js/zoom/FancyZoomHTML.js" type="text/javascript"></script>
     <link rel="shortcut icon" type="image/x-icon" href="/themes/paas/img/favicon.ico" />
-    <!--base tal:define="zopen_view nocall:context/@@zopen_view"
-          tal:attributes="href zopen_view/base_href_url"
-          /--><!--[if lt IE 7]></base><![endif]-->
 
     <!-- Internet Explorer CSS Fixes -->
 
@@ -46,24 +44,26 @@
                <img src="/themes/paas/img/logo.gif" title="易度PaaS开发平台" style="margin-top:12px"/>
              </a>
            </div>
+           <ul id="portal-globalnav">
            $nav
+           </ul>
          </div>
       </div>
       <div class="visualClear" id="clear-space-before-wrapper-table"><!-- --></div>
-      <div id="portal-block-one">
-      <div id="portal-block-two">
-          <table id="portal-columns" align="center">
-			<tr id = "id_tr">
-			    <!--td="portal-column-one">-->
-                $left
-		        <td id="portal-column-content">
-                    <div id="content" class="documentContent">$content</div>
-			    </td>
-                $right
-			</tr>
-	 </table>
-     </div>
-     </div>
+      <table id="portal-columns" align="center">
+                <tr id = "id_tr">
+                        <!--td="portal-column-one">-->
+                    <td id="portal-column-one">
+                      $left
+                    </td>
+                    <td id="portal-column-content">
+                       <div id="content" class="documentContent">$content</div>
+                    </td>
+                    <td id="portal-column-two">
+                      $right
+                    </td>
+                </tr>
+     </table>
       <!--div id="portal-footer"> </div-->
 
         <div id="portal-footer">
