--- a/themes/paas/index.html
+++ b/themes/paas/index.html
@@ -74,23 +74,17 @@
                   <td>
                   <a href="http://www.edodocs.com" target="_blank"><img src="/themes/paas/img/docs.png" title="易度文档"/></a></td>
                   <td>
-                  <a href="http://pdca.everydo.com" target="_blank"><img src="/themes/paas/img/pdca.png" title="易度工作管理"/></a></td>
-                  <td>
                   <a href="http://pm.everydo.com" target="_blank"><img src="/themes/paas/img/projects.png" title="易度项目"/></a></td>
                   <td>
-                  <a href="http://gcpm.everydo.com" target="_blank"><img src="/themes/paas/img/projects.png" title="建筑工程项目"/></a></td>
-                  <td>
-                  <a href="http://opensource.everydo.com" target="_blank"><img src="/themes/paas/img/opensource.png" title="易度开源中心"/></a></td>
+                  <a href="http://viewer.everydo.com" target="_blank"><img src="/themes/paas/img/opensource.png" title="易度云查看"/></a></td>
                   <td>
                   <a href="http://paas.everydo.com" target="_blank"><img src="/themes/paas/img/paas.png" title="易度开发平台"></a></td></tr>
 
                 <tr>
                   <td><a href="http://www.everydo.com" target="_blank">易度云办公</a></td>
                   <td><a href="http://www.edodocs.com" target="_blank">易度文档</a></td>
-                  <td><a href="http://pdca.everydo.com" target="_blank">易度工作管理</a> </td>
                   <td><a href ="http://pm.everydo.com" target="_blank">易度项目</a></td>
-                  <td><a href ="http://gcpm.everydo.com" target="_blank">建筑工程项目</a></td>
-                  <td><a href="http://opensource.everydo.com" target="_blank">易度开源中心</a></td>
+                  <td><a href="http://viewer.everydo.com" target="_blank">易度云查看</a></td>
                   <td><a href="http://paas.everydo.com" target="_blank">易度开发平台</a></td></tr></table>
 		<p><hr/></p>
                 <p  style="margin-top:2.8em">
