--- a/themes/paas/index.html
+++ b/themes/paas/index.html
@@ -54,13 +54,17 @@
                 <tr id = "id_tr">
                         <!--td="portal-column-one">-->
                     <td id="portal-column-one">
-                      $left
+                       <div class="visualPadding">
+                        $left
+                      </div>
                     </td>
                     <td id="portal-column-content">
-                       <div id="content" class="documentContent">$content</div>
+                       <div id="content" class="documentContent" style="width: 743px;">$content</div>
                     </td>
                     <td id="portal-column-two">
-                      $right
+                       <div class="visualPadding">
+                        $right
+                      </div>
                     </td>
                 </tr>
      </table>
