--- a/themes/paas/index.html
+++ b/themes/paas/index.html
@@ -13,9 +13,9 @@
 
     <base href="$base" /><!--[if lt IE 7]></base><![endif]-->
 
-	<link href="/themes/paas/css/base.css" rel="stylesheet" type="text/css" />
-	<link href="/themes/paas/css/document.css" rel="stylesheet" type="text/css" />
-   	<link href="/themes/paas/css/portlets.css" rel="stylesheet" type="text/css" />
+	<link href="$theme_base/css/base.css" rel="stylesheet" type="text/css" />
+	<link href="$theme_base/css/document.css" rel="stylesheet" type="text/css" />
+   	<link href="$theme_base/css/portlets.css" rel="stylesheet" type="text/css" />
 
     <!--link rel="alternate" href="" title="RSS 1.0" type="application/rss+xml" tal:attributes="href string:/RSS" /-->
 
