--- a/themes/paas/index.html
+++ b/themes/paas/index.html
@@ -6,10 +6,10 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     	  <title>
-        易度：企业在线工作平台
+          $title - $site_title
   	  </title>
     <meta name="Keywords" content="项目管理系统,计划管理,任务管理,工作平台,文档管理系统,文档管理软件,文档管理,知识管理">
-    <meta name="Description" content="易度在线工作平台，包括一组在线发布的企业日常管理软件服务，采用SaaS模式发布。具体包括易度项目、易度流程、易度计划、易度>报告、易度任务、易度文档、易度论坛、易度部门、易度消息、易度费用、易度工作量、易度客户等."/>
+    <meta name="Description" content="$description">
 
     <base href="$base" /><!--[if lt IE 7]></base><![endif]-->
 
