--- a/themes/paas/index.html
+++ b/themes/paas/index.html
@@ -9,7 +9,7 @@
           $title - $site_title
   	  </title>
     <meta name="Keywords" content="项目管理系统,计划管理,任务管理,工作平台,文档管理系统,文档管理软件,文档管理,知识管理">
-    <meta name="Description" content="$description">
+    <meta name="Description" content="$site_description">
 
     <base href="$base" /><!--[if lt IE 7]></base><![endif]-->
 
