易度开发者

--- a/themes/developer/index.html
+++ b/themes/developer/index.html
@@ -87,7 +87,7 @@
                   <td><a href="http://www.edodocs.com" target="_blank">易度文档</a></td>
                   <td><a href ="http://pm.everydo.com" target="_blank">易度项目</a></td>
                   <td><a href="http://viewer.everydo.com" target="_blank">易度云查看</a></td>
-                  <td><a href="http://paas.everydo.com" target="_blank">易度开发平台</a></td></tr></table>
+                  <td><a href="http://developer.everydo.com" target="_blank">易度开发者</a></td></tr></table>
 		<p><hr/></p>
                 <p  style="margin-top:2.8em">
                     <span>
