--- a/themes/developer/index.html
+++ b/themes/developer/index.html
@@ -80,7 +80,7 @@
                   <td>
                   <a href="http://viewer.everydo.com" target="_blank"><img src="/themes/paas/img/opensource.png" title="易度云查看"/></a></td>
                   <td>
-                  <a href="http://paas.everydo.com" target="_blank"><img src="/themes/paas/img/paas.png" title="易度开发平台"></a></td></tr>
+                  <a href="http://developer.everydo.com" target="_blank"><img src="/themes/paas/img/paas.png" title="易度开发者"></a></td></tr>
 
                 <tr>
                   <td><a href="http://www.everydo.com" target="_blank">易度云办公</a></td>
