简化首页内容

--- a/themes/developer/index.html
+++ b/themes/developer/index.html
@@ -49,13 +49,11 @@
       </div>
       <div class="visualClear" id="clear-space-before-wrapper-table"><!-- --></div>
       <table id="portal-columns" align="center">
+                <tr><td colspan="2">
+                   $upper
+                </td></tr>
                 <tr id = "id_tr">
                         <!--td="portal-column-one">-->
-                    <td id="portal-column-one">
-                       <div class="visualPadding">
-                        $left
-                      </div>
-                    </td>
                     <td id="portal-column-content">
                        <div id="content" class="documentContent">$content</div>
                     </td>
