修改公司名称

--- a/themes/developer/index.html
+++ b/themes/developer/index.html
@@ -110,8 +110,8 @@
                     </span>
                 </p>
                 <p>
-                    版权所有 &copy; 2002-2009
-                    <a target="_blank" href="http://zopen.cn"> 润普网络科技有限公司（广州 - 上海） </a></p>
+                    版权所有 &copy; 2002-2013
+                     广州润普网络科技有限公司
                 <p><a target="_blank" href="http://www.miibeian.gov.cn/">沪ICP备05008050 </a>
                     <a target="_blank" href="http://www.miibeian.gov.cn/" rel="nofollow">粤ICP备11098433</a></p>
         </div>
