--- a/themes/developer/index.html
+++ b/themes/developer/index.html
@@ -36,7 +36,7 @@
     <div id="visual-portal-wrapper">
       <div id="portal-top">
          <div id="portal-header">
-           <div id="portal-tel">全国热线电话：020-38055596, 4001066883  <a href="http://weibo.com/edodev" target="_blank"><img src="$theme_base/general/img/weibo.png" height="20" width="20" />开发者微博</a></div>
+           <div id="portal-tel">全国热线电话：020-38055596, 020-66351883  <a href="http://weibo.com/edodev" target="_blank"><img src="$theme_base/general/img/weibo.png" height="20" width="20" />开发者微博</a></div>
            <div>
              <a href="http://developer.everydo.com">
                <img src="$theme_base/img/logo.gif" title="易度开发者中心" style="margin-top:12px"/>
