--- a/themes/bootstrap/default.html
+++ b/themes/bootstrap/default.html
@@ -10,6 +10,7 @@
     
     <title>$title - $site_title</title>
 
+    <link href="$theme_base/css/bootstrap.min.css" rel="stylesheet">
     <link href="$theme_base/css/lesscss-theme.css" rel="stylesheet">
     <link href="$theme_base/css/default.css" rel="stylesheet">
 
