--- a/themes/developer-bootstrap/default.html
+++ b/themes/developer-bootstrap/default.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/" class="navbar-brand">易度开发平台</a>
+          <a href="/" class="navbar-brand">易度企业应用平台</a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
           <ul class="nav navbar-nav">
